# yumbook-backend/app/models/__init__.py
@@ -1,2 +1,6 @@
-from app.models.token import *  # noqa: F403
-from app.models.user import *  # noqa: F403
+from .token import Token as Token
+from .token import TokenPayload as TokenPayload
+from .user import User as User
+from .user import UserCreate as UserCreate
+from .user import UserRead as UserRead
+from .user import UserUpdate as UserUpdate
